# 100-days-CUDA

./: README.md
day1/: README.md  vecadd.exp  vecadd.lib  vectorAdd.cpp  vectoradd.cu
day10/: CMakeLists.txt  README.md
day10/src/: softmax.cu
day13/: README.md  conv_1d.cu
day14/: relu.cu
day15/: avg_pool_1d.cu
day2/: matadd.cu  matadd.exp  matadd.lib
day3/: matmul.cu  matmul.exp  matmul.lib  matmul_cublas.cu  matmul_cublas.exp  matmul_cublas.lib
day4/: README.md
day5/: README.md  tiled_matmul.cu  tiled_matmul.exp  tiled_matmul.lib
day6/: tiled_transpose.cu  tiled_transpose.exp  tiled_transpose.lib
day7/: softmax.cu
day8/: softmax_opt.cu  softmax_opt.exp  softmax_opt.lib
day9/: attention.cu  attention.exp  attention.lib  compile.txt
day9/include/: softmax.cuh
day9/src/: matmul.cu
tests/: gpuSpecs.cu  gpuSpecs.exp  gpuSpecs.lib  test.cu  test.exp  test.lib  test2.exp  test2.lib
